Structure HTML Done !!!

--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Frontend Mentor | Ping coming soon page</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Frontend Mentor | Ping coming soon page</title>
+  </head>
 
-  We are launching soon!
-
-  Subscribe and get notified
-
-  Notify Me
-
-  &copy; Copyright Ping. All rights reserved.
-  <script src="./js/script.js"></script>
-</body>
+  <body>
+    <header><img src="./images/logo.svg" alt="logo" /></header>
+    <main>
+      <h1>We are launching <span>soon!</span></h1>
+      <h2>Subscribe and get notified Notify Me</h2>
+      <form action="">
+        <input type="email" placeholder="Enter your email" />
+        <button type="submit">Notify Me</button>
+      </form>
+    </main>
+    <footer>
+      <div>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </div>
+      <div>&copy; Copyright Ping. All rights reserved.</div>
+    </footer>
+    <script src="./js/script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9bb3fa5a29.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
