Another comit for the project !!!

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
     <header><img src="./images/logo.svg" alt="logo" /></header>
     <main>
       <h1>We are launching <span>soon!</span></h1>
-      <h2>Subscribe and get notified Notify Me</h2>
+      <h2>Subscribe and get notified</h2>
       <form action="">
-        <input type="email" placeholder="Enter your email" />
-        <button type="submit">Notify Me</button>
+        <div>
+          <input type="email" placeholder="Enter your email" />
+          <div id="ErrorMsg"></div>
+        </div>
+        <div><button type="submit">Notify Me</button></div>
       </form>
+      <div>
+        <img src="./images/illustration-dashboard.png" alt="comming soon" />
+      </div>
     </main>
     <footer>
       <div>
@@ -31,7 +37,7 @@
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
       </div>
-      <div>&copy; Copyright Ping. All rights reserved.</div>
+      <div><p>&copy; Copyright Ping. All rights reserved.</p></div>
     </footer>
     <script src="./js/script.js"></script>
     <script
