--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <h2>Subscribe and get notified</h2>
       <form action="">
         <div>
-          <input type="email" placeholder="Enter your email" />
+          <input type="email" placeholder="Your email address ..." />
           <div id="ErrorMsg"></div>
         </div>
-        <div><button type="submit">Notify Me</button></div>
+        <div><button type="submit" disabled>Notify Me</button></div>
       </form>
       <div>
         <img src="./images/illustration-dashboard.png" alt="comming soon" />
